fix: overflow x

--- a/sgo/login/style.css
+++ b/sgo/login/style.css
@@ -375,6 +375,7 @@ a {
 @media screen and (width <= 1250px) {
     body {
         overflow-y: scroll;
+        overflow-x: hidden;
     }
 }
 
